--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     var data = { "@context": "https://schema.org", "@type": "FAQPage", "mainEntity": qa };
 
-    // Skriv KUN til HEAD uten rå </script> i kilde
+    // Skriv KUN til HEAD uten rå script i kilde
     var el = document.createElement('script');
     el.type = 'application/ld+json';
     el.setAttribute('data-generated', 'faq');
